# payment-server

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  nixpacks.toml  nixpacks_x.toml
.github/workflows/: CD.yml  CI.yml
migrations/: 20250317093823_init.up.sql  20250321095301_init.up.sql  20250402122024_kharon_pay_db.down.sql  20250402122024_kharon_pay_db.up.sql
migrations/2025-05-20-144915_create_users/: up.sql
migrations/2025-05-25-101433_create_user_wallet/: up.sql
migrations/2025-05-25-101447_create_transactions/: down.sql  up.sql
migrations/2025-05-25-101519_create_otp/: down.sql  up.sql
migrations/2025-05-25-110745_rename_otp_column/: down.sql  up.sql
migrations/2025-06-15-122627_create_user_bank_account/: down.sql  up.sql
migrations/2025-06-27-144915_create_session_controller_info/: down.sql  up.sql
migrations/2025-06-29-001824_add_controller_info_to_user_wallet/: down.sql  up.sql
migrations/2025-06-29-021957_update_session_controller_info/: down.sql  up.sql
migrations/2025-07-05-151131_create_transactions_table/: down.sql  up.sql
migrations/2025-07-14-225606_create_user_wallet/: down.sql  up.sql
migrations/2025-08-02-213504_add_transaction_indexes/: down.sql  up.sql
migrations/2025-08-04-112954_create_payments_table/: down.sql  up.sql
old_migrations/: 20250402122024_kharon_pay_db.up.sql
old_migrations/2025-05-25-101447_create_transactions/: up.sql
src/: main.rs
src/auth/: auth.rs  jwt_auth.rs  mod.rs  models.rs
src/config/: config.rs  config_scope.rs  mod.rs  redis_config.rs
src/database/: db.rs  mod.rs  otp_db.rs  transaction_db.rs  user_bank_account_db.rs  user_db.rs  user_security_log_db.rs  user_wallet_db.rs
src/helpers/: auth_helpers.rs  mod.rs  models.rs  payment_helpers.rs  validation_helpers.rs
src/integrations/: bank.rs  bank_model.rs  flutterwave.rs  mod.rs  model.rs
src/middleware/: mod.rs  security_log.rs
src/models/: mod.rs  models.rs  response.rs  schema.rs
src/pricefeed/: pricefeed.rs
src/routes/: routes.rs
src/service/: email_service.rs
src/service/geolocation/: geolocator.rs
src/service/templates/: confirmation.hbs  failed_transfer.hbs  (+1 more)
src/wallets/: cartridge.rs  helper.rs  mod.rs  models.rs
