[package]
name = "kharon-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
actix-web-lab = "0.23.0"
argon2 = "0.5.3"
awc = "3.6.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.7"
futures = "0.3.31"
futures-util = "0.3.31"
handlebars = "6.3.2"
ipinfo = "3.1.1"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.15", features = ["smtp-transport", "builder", "serde"] }
rand = "0.9.0"
rand_core = { version = "0.9.3", features = ["std"] }
rust_decimal = { version = "1.37.1", features = ["db-postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "rust_decimal"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

