[package]
name = "kharon-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
actix-web-lab = "0.23.0"
anyhow = "1.0.98"
argon2 = "0.5.3"
awc = "3.6.0"
base64 = "0.22.1"
bb8 = "0.9.0"
bb8-redis = "0.21.0"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.7"
futures = "0.3.31"
futures-util = "0.3.31"
handlebars = "6.3.2"
hex = "0.4.3"
hmac = "0.12.1"
ipinfo = "3.1.1"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.15", features = ["smtp-transport", "builder", "serde"] }
log = "0.4.27"
rand = "0.9.0"
rand_core = { version = "0.9.3", features = ["std"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
reqwest = { version = "0.12.15", features = ["json"] }
rust_decimal = { version = "1.37.1", features = ["db-postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "rust_decimal"] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

